--- a/.github/workflows/helloAction.yml
+++ b/.github/workflows/helloAction.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  myjob:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
